# ohtu-tehtavat-s2021

./: README.md  retro.md  tagitiedosto.txt  w6e1.txt
koodi/viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics.py
koodi/viikko1/nhl-statistics-1/src/tests/: statistics_test.py
koodi/viikko2/poetry-web/: pyproject.toml
koodi/viikko2/project-reader/: pyproject.toml
koodi/viikko2/project-reader/src/: index.py  project_reader.py
koodi/viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py
koodi/viikko3/login-robot/src/services/: user_service.py
koodi/viikko3/login-robot/src/tests/: login.robot  register.robot
koodi/viikko3/nhl-reader/: pyproject.toml
koodi/viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
koodi/viikko3/web-login-robot/src/: AppLibrary.py  app.py
koodi/viikko3/web-login-robot/src/services/: user_service.py
koodi/viikko3/web-login-robot/src/tests/: login.robot  (+2 more)
koodi/viikko4/int-joukko/src/: index.py  int_joukko.py
koodi/viikko4/tdd-ostoskori/src/: ostoskori.py
koodi/viikko4/verkkokauppa/: .coverage  pyproject.toml
koodi/viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
koodi/viikko5/tennis/src/: index.py  tennis_game.py
koodi/viikko5/w5e1/: xxx.txt
koodi/viikko6/query-language/src/: index.py  matchers.py  query_builder.py
koodi/viikko7/: someFileInHaara.txt
koodi/viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli.py
koodi/viikko7/w7e1/: file1.txt
(+4 files in other folders)
